WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115494
<object data="<some data URL>"> MIME types aren't case-insensitive
https://bugs.webkit.org/show_bug.cgi?id=115494
Summary
<object data="<some data URL>"> MIME types aren't case-insensitive
Tim Horton
Reported
2013-05-01 16:12:06 PDT
My understanding is that they should be. This also appears to be the only path through <embed> or <object> that doesn't call .lower() on the incoming MIME type. See attached test case.
Attachments
repro
(462 bytes, text/html)
2013-05-01 16:12 PDT
,
Tim Horton
no flags
Details
patch
(2.45 KB, patch)
2013-05-01 16:31 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
with test case this time
(3.92 KB, patch)
2013-05-01 16:31 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-05-01 16:12:30 PDT
Created
attachment 200250
[details]
repro
Tim Horton
Comment 2
2013-05-01 16:31:03 PDT
Created
attachment 200253
[details]
patch
Tim Horton
Comment 3
2013-05-01 16:31:53 PDT
Created
attachment 200254
[details]
with test case this time
Tim Horton
Comment 4
2013-05-01 17:14:47 PDT
http://trac.webkit.org/changeset/149466
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug