<object data="<some data URL>"> MIME types aren't case-insensitive https://bugs.webkit.org/show_bug.cgi?id=115494

Reviewed by Darin Adler.

Test: fast/images/object-data-url-case-insensitivity.html

MIME types are defined to be case-insensitive, but many places in WebCore
only compare them against lower-case strings. Most entry points for MIME
types lower-case them, but mimeTypeFromDataURL doesn't, causing, for example,
data:image/png;... to work, but data:iMaGe/PNG;... to fail.

To fix this, lower-case the string returned from mimeTypeFromDataURL.

* platform/KURL.cpp:
(WebCore::mimeTypeFromDataURL):

Add a testcase that ensures that iMaGe/PNG == image/png when it comes to
the MIME type specified in a data URL provided to <object> via its
'data' attribute.

* fast/images/object-data-url-case-insensitivity-expected.html: Added.
* fast/images/object-data-url-case-insensitivity.html: Added.


Canonical link: https://commits.webkit.org/133942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149466 268f45cc-cd09-0410-ab3c-d52691b4dbfc